<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HiApp</string>
    <string name="action_settings">设置</string>
    <string name="title_section1">新鲜事</string>
    <string name="title_section2">新消息</string>
    <string name="title_section3">通讯录</string>
    <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_username_hint">请输入学号</string>
    <string name="infor_user_base_infor">基本信息</string>   
    <string name="infor_user_school_infor">学校信息</string>   
    <string name="infor_user_contact_infor">联系方式</string>  
    <string name="infor_user_say_infor">个性签名</string> 
    <string name="infor_user_sex_infor">性别:\t</string>   
    <string name="infor_user_birth_infor">生日:\t</string>   
    <string name="infor_user_university_infor">学校:\t</string>  
    <string name="infor_user_class_infor">班级:\t</string> 
    <string name="infor_user_QQ_infor">扣扣:\t</string>   
    <string name="infor_user_tel_infor">电话:\t</string>   
    <string name="voting_hint">欢迎参加投票</string>   
    <string name="activity_send_hint1">输入活动名称</string>   
    <string name="activity_send_hint2">输入活动内容</string>
    <string name="voting_choice">投票选项</string>
    <string name="go_back_but">返回</string>   
    <string name="title_image">标题</string>   
    <string name="choice_submit_button">提交</string>   
    <string name="button_add">添加</string> 
    <string name="voting_add_voting">发起新投票 </string> 
    <string name="voting_name_hint">投票名称 </string>  
    <string name="voting_voting_description">投票描述 </string>  
    <string name="voting_choice_num">投票选项数 </string>  
    <string name="voting_new_submit"> 提交 </string> 
    <string name="voting_description_hint"> 投票描述 </string> 
	<string name="voting_num_hint"> 1到100 </string> 
    <string name="select_all"> 全选 </string> 
    <string name="clear_selected"> 取消已选 </string> 
    
</resources>
