<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background_login">
    
	<RelativeLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:paddingLeft="4dp"
    	android:paddingRight="12dp"
    	android:paddingTop="4dp"
    	android:paddingBottom="4dp"
    	android:background="@drawable/menu_bg"
    	android:orientation="horizontal">
	   
	    <ImageView
	        android:id = "@+id/go_back_button"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="6dp"
            android:clickable="true"
            android:src="@drawable/button_back_background" 
            android:contentDescription="@string/go_back_but"       
	    />
	    	    
	    <ImageView
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
            android:layout_toRightOf="@id/go_back_button"
            android:layout_marginLeft="4dp"
            android:src="@drawable/title_image"     
            android:contentDescription="@string/title_image"   
	    />
	        
	    <ImageView 
	        android:id = "@+id/go_add_button"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:clickable="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/button_add_background"   
            android:contentDescription="@string/button_add"   
	    />
	    
	</RelativeLayout>
   
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center">
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_margin="4dp"
	    android:text="@string/voting_add_voting"
	    android:textColor="#427d6e"
	    android:textSize="30sp"
	    android:textStyle="bold" >    
	</TextView>
	</LinearLayout>
	 <RelativeLayout 
  	android:id="@+id/login_div"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:padding="15dip"        
  	android:layout_margin="15dip" 
  	android:background="@drawable/background_login_div_bg"
  	>
		<TableLayout
		    
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >
		    <TableRow
		        android:id="@+id/tableRow1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" 
		        >
				
		        <TextView
		            android:id="@+id/textView1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/voting_add_voting"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
	
		        <EditText
		            android:id="@+id/VotingName"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:hint="@string/voting_name_hint"
		            android:singleLine="true"
		            android:ems="10" >
	
		            <requestFocus />
		        </EditText>
	
		    </TableRow>
	
		    <TableRow
		        android:id="@+id/tableRow2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
	
		        <TextView
		            android:id="@+id/textView2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/voting_voting_description"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
	
		        <EditText
		            android:id="@+id/VotingDescribe"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:hint="@string/voting_description_hint"
		            android:singleLine="true"
		            android:ems="10" />
	
		    </TableRow>
	
		    <TableRow
		        android:id="@+id/tableRow3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
	
		        <TextView
		            android:id="@+id/textView3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/voting_choice_num"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
	
		        <EditText
		            android:id="@+id/NumChoice"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:ems="10"
		            android:hint="@string/voting_num_hint"
		            android:singleLine="true"
		            android:inputType="number" />
	
		    </TableRow>
	
		    <TableRow
		        android:id="@+id/tableRow4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
		    </TableRow>
		</TableLayout>
	</RelativeLayout>

	 <Button
	    android:id="@+id/buttonBeginVoting"
	    android:layout_marginLeft="30dp"
		android:layout_width="100dp"
        android:layout_height="40dp"
        android:textColor="#FFFFFF" 
        android:background="@drawable/button_bg_background" 	
	     android:text="@string/voting_new_submit" />

</LinearLayout>
