<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >
    
	<RelativeLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:paddingLeft="4dp"
    	android:paddingRight="12dp"
    	android:paddingTop="4dp"
    	android:paddingBottom="4dp"
    	android:background="@drawable/menu_bg"
    	android:orientation="horizontal">
	   
	    <ImageView
	        android:id = "@+id/go_back_button"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="6dp"
            android:clickable="true"
            android:src="@drawable/button_back_background"      
	    />
	    	    
	    <ImageView
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
            android:layout_toRightOf="@id/go_back_button"
            android:layout_marginLeft="4dp"
            android:src="@drawable/title_image"      
	    />
	        
	    <ImageView 
	        android:id="@+id/go_confirm_button"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:clickable="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/button_confirm_background"   
	    />	    
	</RelativeLayout>	
	
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip"
            android:background="@drawable/background_login_div_bg"
            android:orientation="vertical"
            android:padding="15dip" >
          
            <TextView                
                android:id="@+id/infor_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#427d6e"
                android:textSize="30sp"
                android:textStyle="bold"/>
			           
			<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold" 
                android:textColor="#2bae93"
                android:textSize="16sp"
                android:text="@string/infor_user_base_infor" />
			
			<View
			    android:layout_width="fill_parent"
				android:layout_height="2dp"
				android:background="#dddddd" >
			</View>
			
			<TableLayout
			    android:layout_marginTop="6dp"
			    android:layout_height="wrap_content" 
   				android:layout_width="match_parent"
   				android:stretchColumns="1"  
        		android:shrinkColumns="0"  >
			    <TableRow> 
  					<TextView 
  					    android:layout_gravity="right|bottom"
  					    android:text="@string/infor_user_sex_infor"
  					    android:layout_width="60dp"> 					    
  					</TextView> 
  					<EditText 
  					    android:inputType="text"
  					    android:id="@+id/getinfor_usersex" />	
				</TableRow> 
				<TableRow> 
  					<TextView 
  					    android:layout_gravity="right|bottom"
  					    android:text="@string/infor_user_birth_infor"
  					    android:layout_width="60dp"> 					    
  					</TextView> 
  					<EditText 
  					    android:inputType="datetime"
  					    android:id="@+id/getinfor_userbirth" />		
				</TableRow> 
			</TableLayout>
			
			<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold" 
                android:textColor="#2bae93"
                android:textSize="16sp"
                android:text="@string/infor_user_school_infor" />
			
			<View
			    android:layout_width="fill_parent"
				android:layout_height="2dp"
				android:background="#dddddd" >
			</View>
			
			<TableLayout
			    android:layout_marginTop="6dp"
			    android:layout_height="wrap_content" 
   				android:layout_width="match_parent"
   				android:stretchColumns="1"  
        		android:shrinkColumns="0"  >
			    <TableRow> 
  					<TextView 
  					    android:layout_gravity="right|bottom"
  					    android:text="@string/infor_user_university_infor"
  					    android:layout_width="60dp"> 					    
  					</TextView> 
					<EditText 
					    android:inputType="text"
					    android:id="@+id/getinfor_useruniver" />	
				</TableRow> 
				<TableRow> 
  					<TextView 
  					    android:layout_gravity="right|bottom"
  					    android:text="@string/infor_user_class_infor"
  					    android:layout_width="60dp"> 					    
  					</TextView> 
					<EditText 
					    android:inputType="text"
					    android:id="@+id/getinfor_userclass" />		
				</TableRow> 
			</TableLayout>
			
			<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold" 
                android:textColor="#2bae93"
                android:textSize="16sp"
                android:text="@string/infor_user_contact_infor" />
			
			<View
			    android:layout_width="fill_parent"
				android:layout_height="2dp"
				android:background="#dddddd" >
			</View>
			
			<TableLayout
			    android:layout_marginTop="6dp"
			    android:layout_height="wrap_content" 
   				android:layout_width="match_parent"
   				android:stretchColumns="1"  
        		android:shrinkColumns="0"  >
			    <TableRow> 
  					<TextView 
  					    android:layout_gravity="right|bottom"
  					    android:text="@string/infor_user_QQ_infor"
  					    android:layout_width="60dp"> 					    
  					</TextView> 
					<EditText 
					    android:inputType="number"
					    android:id="@+id/getinfor_userQQ" />	
				</TableRow> 
				<TableRow> 
  					<TextView 
  					    android:layout_gravity="right|bottom"
  					    android:text="@string/infor_user_tel_infor"
  					    android:layout_width="60dp"> 					    
  					</TextView> 
  					<EditText 
  					    android:inputType="phone"
  					    android:id="@+id/getinfor_usertel" />	
				</TableRow> 
			</TableLayout>	
		
			<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold" 
                android:textColor="#2bae93"
                android:textSize="16sp"
                android:text="@string/infor_user_say_infor" />
			
			<View
			    android:layout_width="fill_parent"
				android:layout_height="2dp"
				android:background="#dddddd" >
			</View>
			
			<EditText
                android:id="@+id/getinfor_usersay"
                android:layout_margin="6dp"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />					
        </LinearLayout>
    </ScrollView>
</LinearLayout>
